@@ -1,7 +1,7 @@
 CFLAGS=-Wall -Os -D_GNU_SOURCE
 LIBS=-lparted
 
-all: parted_server parted_devices partmap stralign
+all: parted_server parted_devices partmap
 
 parted_server: parted_server.c
 	$(CC) $(CFLAGS) $(LIBS) parted_server.c -o parted_server
@@ -12,10 +12,7 @@ parted_devices: parted_devices.c
 partmap: partmap.c
 	$(CC) $(CFLAGS) $(LIBS) partmap.c -o partmap
 
-stralign: stralign.c
-	$(CC) $(CFLAGS) stralign.c -o stralign
-
 clean:
-	rm -f parted_server parted_devices stralign partmap
+	rm -f parted_server parted_devices partmap
 
 .PHONY: clean
