@@ -1,4 +1,3 @@
 lib lib/partman
 partman bin
 parted_server bin
-stralign bin
