@@ -20,6 +20,7 @@ partman-base (124) UNRELEASED; urgency=low
   * Switch visual.d scripts to use column alignment (${!TAB}).
   * Remove partition_tree_choice() "whitespaces" hack, now useless with the
     new debconf_select().  (Closes: #271706)
+  * Remove the stralign binary: alignment is now done at the cdebconf level.
 
  -- Jérémy Bobbio <lunar@debian.org>  Tue, 29 Jul 2008 15:25:08 +0000
 
